Errors in statements fixed

--- a/Lecture3/tasks/lecture3_problems.tex
+++ b/Lecture3/tasks/lecture3_problems.tex
@@ -64,10 +64,10 @@ A = [1,1,2,2,2,4,7,8,9,p,p] \\
 B = [4,5,2,2,2,1,4,4,4,4,q,q]
 \end{array}
 $$
-Вычислить меры Жаккара, Дайса и Кульчинского.
+Вычислить обобщенные на случай мультимножеств  меры Жаккара, Дайса и Кульчинского.
 
 
-\task Вычислить меру Дайса для двух списков (с повторениями) видов \texttt{lec3\_measures\_var1.dat}.
+\task Вычислить обобщенную на случай мультимножеств меру Дайса (мера для дескриптивных наборов) для двух списков (с повторениями) видов \texttt{lec3\_measures\_var1.dat}.
 
 \begin{tabular}{ll}
 Caldesia reniformis;&Caldesia reniformis\\
@@ -78,9 +78,10 @@ Caldesia reniformis;&Allium spirale\\
 \ldots &
 \end{tabular} 
 
-\task Вы сравниваете флористические списки. Матрица мер сходства Жаккара успешно посчитана до вас, но содержит ошибки.
+\task Вы сравниваете флористические списки. Матрица мер сходства успешно посчитана до вас, но содержит ошибки.
 Попробуйте определить при сравнении каких именно списков (они нумеруются по строкам/столбцам матрицы)
-была допущена ошибка. Матрица дана в файле \texttt{lec3\_bigmat\_var1.dat}
+была допущена ошибка, полагая, что значения меры сходства не могут выходить за границы единичного интервала.
+Матрица дана в файле \texttt{lec3\_bigmat\_var1.dat}
 
 
 \task Исследуется эффективность действия удобрения на рост растений. Для этого 100 тестовых образцов 
@@ -222,9 +223,9 @@ A = 'jaccard1901', \\
 B = 'dice1948',
 \end{array}
 $$
-вычислить меры Жаккара, Дайса и Кульчинского.
+вычислить обобщенные на случай мультимножеств  меры Жаккара, Дайса и Кульчинского.
 
-\task Вычислить меру Жаккара для двух списков (с повторениями) видов \texttt{lec3\_measures\_var2.dat}.
+\task Вычислить обощенную меру Жаккара (мера для дескриптивных наборов) для двух списков (с повторениями) видов \texttt{lec3\_measures\_var2.dat}.
 
 \begin{tabular}{ll}
 Agave stricta; &Lithops aucampiae\\
@@ -238,7 +239,8 @@ Allium spirale;&Allium schoenoprasum\\
 
 \task Вы сравниваете флористические списки. Матрица мер сходства успешно посчитана до вас, но содержит ошибки.
 Попробуйте определить при сравнении каких именно списков (они нумеруются по строкам/столбцам матрицы)
-была допущена ошибка. Матрица дана в файле \texttt{lec3\_bigmat\_var2.dat}
+была допущена ошибка, полагая, что значения меры сходства не могут выходить за границы единичного интервала.
+Матрица дана в файле \texttt{lec3\_bigmat\_var2.dat}
 
 
 \task Исследуется эффективность действия удобрения на рост растений. Для этого 100 тестовых образцов 
